Corrected the image that gets loaded for the phone-holder on navigation bar on navbar-stuck

--- a/src/components/Navigation.module.scss
+++ b/src/components/Navigation.module.scss
@@ -331,8 +331,10 @@ nav {
         background-position: initial;
       }
     }
-    .phoneHolder {
-      background-image: url("../img/icon/phone-blue.svg");
+    .phone > a {
+      .phoneHolder {
+        background-image: url("../img/icon/phone-blue.svg");
+      }
     }
     .navButton {
       border-color: $primary;
@@ -480,7 +482,7 @@ nav.contactNav {
     }
 
     .phone > a .phoneHolder {
-      background-image: url("../img/phone-blue.svg");
+      background-image: url("../img/icon/phone-blue.svg");
     }
     .button.navButton {
       border: 1px solid $primary;
